--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Amethyst
+title: The Rising Tide
 email: jay@jayarnielsen.com
 description: > # this means to ignore newlines until "baseurl:"
-  Amethyst is a Jekyll Starter Theme Inspired by Sage 9
+  A Co-Work space for Innovators, Changemakers & Entrepreneurs
 baseurl: "/the-rising-tide" # the subpath of your site, e.g. /blog
 url: "https://github.com/jayarnielsen/amethyst" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
