--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: jay@jayarnielsen.com
 description: > # this means to ignore newlines until "baseurl:"
   A Co-Work space for Innovators, Changemakers & Entrepreneurs
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://github.com/jayarnielsen/amethyst" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://risingtidecowork.com" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
 
 # Build settings
